# FusedKernelLibrary

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-linux-amd64.yml  cmake-linux-arm64.yml  cmake-linux.yml  cmake-multi-platform.yml  cmake-windows-amd64.yml  cmake-windows-arm64.yml  cmake-windows.yml  copilot-setup-steps.yml
benchmarks/: CMakeLists.txt  fkBenchmarksCommon.h  oneExecutionBenchmark.h  twoExecutionsBenchmark.h
benchmarks/fusion/: benchmark_horizontal_fusion.cu  benchmark_horizontal_fusion.h  benchmark_thread_fusion.cu  benchmark_thread_fusion.h
benchmarks/latencyhiding/: benchmark_latency_hiding.cu  benchmark_latency_hiding.h  benchmark_numinstructions_x_operation.cu
benchmarks/npp/: benchmark_npp_batchresize_x_split3D.cu
benchmarks/numinstructions/: benchmark_numinstructions_x_operation.cu  benchmark_numinstructions_x_operation.h
build_llvm/tests/readme_test_code_cpp/: launcher.cpp
build_llvm/tests/test_IOps_to_string_cpp/: launcher.cpp
build_llvm/tests/test_batchresize_build_cpp/: launcher.cpp
build_llvm/tests/test_cpu_jit_cpp/: launcher.cpp
build_llvm/tests/test_filtered_index_sequence_cpp/: launcher.cpp
build_llvm/tests/test_fk_string_cpp/: launcher.cpp
build_llvm/tests/test_fused_operation_cpp/: launcher.cpp
build_llvm/tests/test_literal_to_string_cpp/: launcher.cpp
build_llvm/tests/test_nvrtc_cpp/: launcher.cpp
build_llvm/tests/test_operation_tuple_cpp/: launcher.cpp
build_llvm/tests/test_operation_types_cpp/: launcher.cpp
build_llvm/tests/test_rect_cpp/: launcher.cpp
build_llvm/tests/test_struct_to_string_cpp/: launcher.cpp
build_llvm/utests/test_VBase_cpp/: launcher.cpp
build_llvm/utests/test_constexpr_cmath_cpp/: launcher.cpp
cmake/: archflags.cmake  cmake_init.cmake  cuda_init.cmake  discover_tests.cmake  install_llvm_windows.ps1  llvm_jit.cmake
cmake/generators/: export_header.cmake
cmake/libs/: googletest.cmake
cmake/libs/cuda/: archs.cmake  cuda.cmake  deploy.cmake  target_generation.cmake
cmake/tests/: add_generated_test.cmake  discover_tests.cmake
cpu_tests/: CMakeLists.txt  basic_cpu_test.cpp
include/: CMakeLists.txt
include/fused_kernel/: fused_kernel.cuh  fused_kernel.h
include/fused_kernel/algorithms/: algorithms.cuh  algorithms.h
include/fused_kernel/algorithms/basic_ops/: algebraic.cuh  algebraic.h  arithmetic.cuh  arithmetic.h  basic_ops.cuh  basic_ops.h  cast.cuh  cast.h  cast_base.h  cuda_vector.cuh  cuda_vector.h  logical.cuh  logical.h  set.cuh  set.h  static_loop.cuh  static_loop.h
include/fused_kernel/algorithms/image_processing/: border_reader.cuh  border_reader.h  color_conversion.cuh  color_conversion.h  crop.cuh  crop.h  deinterlace.h  image.h  image_processing.cuh  image_processing.h  interpolation.cuh  interpolation.h  raw_image.h  resize.cuh  resize.h  saturate.cuh  saturate.h  warping.cuh  warping.h
include/fused_kernel/core/: core.cuh  core.h
include/fused_kernel/core/data/: array.cuh  (+15 more)
include/testing/: fkTestsCommon.h  fkbenchmark.h  main.cpp  nppbenchmark.h  testsNppCommon.h
lib/: CMakeLists.txt  FKLConfigVersion.cmake.in  cpu_jit_details.cpp
lib/export/: FKLConfig.cmake  FKLTargets.cmake
tests/: launcher.in  main.cpp  nvtx.h  operation_test_utils.h
tests/JIT/: test_cpu_jit.h  test_cpu_jit_main.cpp  test_nvrtc.h
tests/JIT/test_cpu_jit_cpp/: launcher.cpp
tests/algorithm/: test_batchresize_build.cu  test_batchresize_build.h  test_border_reader.cu  test_border_reader.h  test_crop.cu  test_crop.h  test_deinterlace.h  test_warp.cu  test_warp.h  test_warp.in
tests/algorithm/image_processing/: test_saturate.h
tests/cudabug/: test_nvcc124_126_BugReproducer.cu  test_nvcc124_126_BugReproducer.h  test_nvcc1281_129_BugReproducer.cu  test_nvcc1281_129_BugReproducer.h  test_nvcc1281_BugReproducer.cu  test_nvcc14_15_BugReproducer.cu
tests/data/: basic_test.cu  basic_test.h  test_ptr_nd.cu  test_ptr_nd.h  test_ptr_nd.in  test_rect.cu  test_tuple.cu  test_tuple.h  test_typelist.cu
tests/device/: test_device_functions.cu
tests/examples/: readme_test_code.cu  readme_test_code.h
tests/latencyhiding/: benchmark_latency_hiding.cu
tests/operation/: test_filtered_index_sequence.cu  test_filtered_index_sequence.h  test_fused_operation.cu  test_fused_operation.h  test_instantiable_operations.cu  test_instantiable_operations.h  test_instantiable_operations.in  test_operation_fuser.cu  test_operation_fuser.h  test_operation_tuple.cu  test_operation_tuple.h  test_operation_types.cu  test_operation_types.h
tests/string/: test_IOps_to_string.h  test_fk_string.h  test_literal_to_string.h
tests/thread_fusion/: test_thread_fusion.cu  test_thread_fusion.h
tests/unit_tests/: test_constexpr_cmath.h
tests/utils/: main.cpp  nppbenchmark.h  oneExecutionBenchmark.h  test_vaulue_to_string.h  twoExecutionsBenchmark.h
utests/: CMakeLists.txt
utests/algorithm/image_processing/: test_color_conversion.h  test_deinterlace.h  test_saturate.h  test_saturate.h.in  test_saturate1.h  test_saturate2.h  test_saturate3.h  test_saturate4.h  test_saturate5.h  test_saturate6.h  test_saturate_char.h  test_saturate_common.h  test_saturate_double.h  test_saturate_float.h  test_saturate_int.h  test_saturate_long.h  test_saturate_longlong.h  test_saturate_short.h  test_saturate_uchar.h  test_saturate_uint.h  test_saturate_ulong.h  test_saturate_ulonglong.h  test_saturate_ushort.h  utest_deinterlace.h  utest_saturate.cpp.in  utest_saturate.h  utest_saturate.h.in
utests/algorithm/image_processing/test_saturate/: test_saturate.h  test_saturate_char.h  test_saturate_double.h  test_saturate_float.h  test_saturate_int.h  test_saturate_long.h  test_saturate_longlong.h  test_saturate_short.h  test_saturate_uchar.h  test_saturate_uint.h  test_saturate_ulong.h  test_saturate_ulonglong.h  test_saturate_ushort.h
utests/core/constexpr_libs/: utest_constexpr_cmath.h
utests/core/utils/: test_VBase.h  test_vector_operators.h  utest_cuda_vector_utils.cpp.in  utest_cuda_vector_utils.h  utest_cuda_vector_utils.h.in
utests/jit/: test_clang_runtime_compilation.h
(+60 files in other folders)
